# molkit

./: .gitignore  README.md  ROADMAP.md  main.py  pyproject.toml  requirements.txt
molkit/: __init__.py  analysis.py  database.py  datasets.py  descriptors.py  io.py  molecule.py  reports.py  utils.py  visualization.py
molkit/api_clients/: pubchem_client.py
